Fixes alignment in slider

--- a/less/_bootstrap-slider.less
+++ b/less/_bootstrap-slider.less
@@ -1,3 +1,5 @@
+// styles for https://github.com/seiyria/bootstrap-slider
+
 .slider {
     .slider-handle {
         background-color: @progress-bar-bg;
@@ -13,7 +15,7 @@
         width: 100%;
         height: @input-height-base;
         .slider-handle {
-            margin-top: -5px;
+            margin-top: -6px;
         }
         .slider-track {
             margin-top: -3px;
